@@ -10,9 +10,9 @@ public class PrimitiveTypesMain {
         System.out.println(c);
         Integer d=b;
         System.out.println(d);
-        Integer e=Integer.valueOf(2);
+        Integer e= new Integer(2);
         System.out.println(e);
-        int f=Integer.valueOf(2);
+        int f= new Integer(2);
         System.out.println(f);
         int g=Integer.valueOf(a);
         System.out.println(g);
@@ -22,5 +22,23 @@ public class PrimitiveTypesMain {
         System.out.println(i);
         Integer j=Integer.parseInt("2");
         System.out.println(j);
+        System.out.println();
+
+        boolean k=true;
+        Boolean l=true;
+        boolean m=new Boolean(true);
+        Boolean n=new Boolean(true);
+        boolean o=Boolean.parseBoolean("TrUe");
+        Boolean p=Boolean.parseBoolean("TrUe");
+        boolean q=Boolean.parseBoolean("TreU");
+        Boolean r=Boolean.parseBoolean("TreU");
+        System.out.println(k);
+        System.out.println(l);
+        System.out.println(m);
+        System.out.println(n);
+        System.out.println(o);
+        System.out.println(p);
+        System.out.println(q);
+        System.out.println(r);
     }
 }
